test/coercions/negative/simple_cycle.mli.expected

*******************************
********** Parsed file ********
*******************************
type t1
type t2
[@@@gospel {| function c1 (x: t1) : t2 |}[@@gospel {| coercion |}]]
[@@@gospel {| function c2 (x: t2) : t1 |}[@@gospel {| coercion |}]]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

type t1
  

type t2
  

(*@ function c1 ...
    coercion *)

(*@ function c2 ...
    coercion *)
File "simple_cycle.mli", line 7, characters 10-12:
Error: This coercion introduces a cycle:
         c1: t1 -> t2.
